# llvm-project

lldb/include/lldb/Expression/: DWARFExpression.h
lldb/include/lldb/Utility/: ArchSpec.h  DataExtractor.h
lldb/source/API/: SystemInitializerFull.cpp
lldb/source/Core/: Disassembler.cpp  ValueObjectVariable.cpp
lldb/source/Expression/: DWARFExpression.cpp
lldb/source/Plugins/DynamicLoader/Static/: DynamicLoaderStatic.cpp
lldb/source/Plugins/ObjectFile/WASM/: CMakeLists.txt  ObjectFileWasm.cpp  ObjectFileWasm.h
lldb/source/Plugins/Process/Utility/: CMakeLists.txt  RegisterContextLLDB.cpp  UnwindWasm.cpp  UnwindWasm.h
lldb/source/Plugins/Process/gdb-remote/: GDBRemoteCommunicationClient.cpp  GDBRemoteCommunicationClient.h  ProcessGDBRemote.cpp  ProcessGDBRemote.h
lldb/source/Plugins/SymbolFile/DWARF/: DWARFASTParserClang.cpp  DWARFContext.cpp  DWARFDataExtractor.h  SymbolFileDWARF.cpp
lldb/source/Plugins/SymbolVendor/ELF/: SymbolVendorELF.cpp
lldb/source/Plugins/SymbolVendor/WASM/: CMakeLists.txt  SymbolVendorWASM.cpp  SymbolVendorWASM.h
lldb/source/Symbol/: LocateSymbolFile.cpp
lldb/source/Utility/: ArchSpec.cpp
lldb/test/: CMakeLists.txt
lldb/test/Shell/: CMakeLists.txt  lit.site.cfg.py.in
lldb/test/Shell/helper/: toolchain.py
lldb/test/Shell/tools/lldb-cdlc/: formatArray.js  formatCompound.js  formatString.js  formatVariable.js  lit.local.cfg  parameters.test  tests.js
lldb/test/Shell/tools/lldb-cdlc-unit/: lit.cfg.py  lit.site.cfg.py.in
lldb/test/Shell/tools/lldb-cdlc/Inputs/: formatArray.json  formatCompound.json  formatString.json  formatVariable.json  lsp-encode  parameters.json
lldb/tools/: CMakeLists.txt
lldb/tools/lldb-cdlc/: CMakeLists.txt  Main.cpp  Modules.cpp  Modules.h  Protocol.h  RPC.cpp  RPC.h  Util.h  Variables.cpp  Variables.h  cdlc.proto  lldb-cdlc-config.h.in
lldb/tools/lldb-cdlc/runtime/: formatters.cc
lldb/tools/lldb-cdlc/tools/: cdlc-server  pdl-to-proto
lldb/unittests/tools/: CMakeLists.txt
lldb/unittests/tools/lldb-cdlc/: CMakeLists.txt  OffsetComputations.cpp  VariablePrinting.cpp  lldb-cdlc-test-config.h.in
lldb/unittests/tools/lldb-cdlc/inputs/: Makefile  array.dwo  array.stripped.wasm  array.wasm  classstatic.cc  classstatic.wasm  compound.dwo  compound.stripped.wasm  compound.wasm  global.dwo  global.stripped.wasm  global.wasm  hello.dwo  hello.stripped.wasm  hello.wasm  inline.cc  inline.wasm  params.c  params.wasm  preview.html  string.dwo  string.stripped.wasm  string.wasm
llvm/include/llvm/BinaryFormat/: ELF.h
llvm/lib/CodeGen/AsmPrinter/: AsmPrinter.cpp  DebugLocEntry.h  DwarfDebug.cpp  DwarfExpression.cpp  DwarfExpression.h
llvm/lib/Support/: VirtualFileSystem.cpp
